stuck on a small bug

--- a/Frontend/client/src/AllMyTracks/MarketTrackDetails/MarketTrackDetails.css
+++ b/Frontend/client/src/AllMyTracks/MarketTrackDetails/MarketTrackDetails.css
@@ -1,9 +1,20 @@
 .MarketTrackDetails{
     width: 100% !important;
     height: 50vh !important;
+    position: relative;
 }
 .Market_Track_Details{
     width: 100%;
+}
+.market_loadings{
+    position: absolute;
+    width: 100%;
+    /* height: 150vh; */
+    top: 0;
+    bottom: 0;
+    z-index: 999999999;
+    background-color: rgba(0, 0, 0,0.955);
+    left: 0;
 }
 .Trackings{
     font-size: var(--header-h3) !important;
